5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1650_2449.log
== SUBMITION (2019-04-23 18:16:00) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
solucao=x=(c*e-b*f/a*e-b*d);y=(a*f-c*d/a*e-b*d)
if (a,e!0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(mensagem)
-- EXECUTION TIME:
0.174465
-- ERROR:
  File "/home/codebench/codes/1650/2449/main.py", line 8
    if (a,e!0):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:16:03) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
solucao=x=(c*e-b*f/a*e-b*d);y=(a*f-c*d/a*e-b*d)
if (a,e!0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if (a,e!0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:16:45) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
solucao=x=(c*e-b*f/a*e-b*d);y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(mensagem)
-- ERROR:
File "XXXX", line 8
    if (a*e-b*d!0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:16:52) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
solucao=x=(c*e-b*f/a*e-b*d);y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!=0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(mensagem)
-- EXECUTION TIME:
0.202247
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 12, in <module>
    print(mensagem)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 12: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:16:53) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
solucao=x=(c*e-b*f/a*e-b*d);y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!=0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(mensagem)
-- OUTPUT:
Nao tem soluçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:21:22) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
x=(c*e-b*f/a*e-b*d)
y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!=0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(x,y)
-- OUTPUT:
-100.0 -100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:21:57) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
x=(c*e-b*f/a*e-b*d)
y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!=0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(x,y)
-- EXECUTION TIME:
0.184752
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-100.0 -100.0
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-5144.0 -4322.0
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-4576.0 -9234.666666666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:21:59) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
x=(c*e-b*f/a*e-b*d)
y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!=0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(x,y)
-- OUTPUT:
-100.0 -100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:24:02) 
-- CODE:
a=float(input("digite o numero"))
b=float(input("digite o numero"))
c=float(input("digite o numero"))
d=float(input("digite o numero"))
e=float(input("digite o numero"))
f=float(input("digite o numero"))
x=(c*e-b*f/a*e-b*d)
y=(a*f-c*d/a*e-b*d)
if (a*e-b*d!=0):
	mensagem= "Tem soluçao "
else:
	mensagem="Nao tem soluçao"
print(x,y)
-- EXECUTION TIME:
0.164902
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-100.0 -100.0
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-5144.0 -4322.0
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-4576.0 -9234.666666666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
